chore: minor code cleanups